--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <meta name="twitter:description" content="" />
                    
 
-<meta http-equiv="refresh" content="0;URL='' " /> 
+<meta http-equiv="refresh" content="0;URL='https://aa.dailyzour.com/how-to-use-event-apps-to-enhance-your-trade-show-booth/' " /> 
 
 
  
